Updated partner conference dates

--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -113,17 +113,17 @@ block content
               h5
                 +extlink('http://jscraftcamp.org', 'JS CraftCamp')
                 br
-                small 8 - 9 Oct 2016, Munich, Germany
+                small 21 - 22 July 2017, Munich, Germany
             .col-sm-6
               h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
-                small 27 - 30 Oct 2016, Rochegude
+                small 26 - 29 Oct 2017, Rochegude
             .col-sm-6
               h5
-                +extlink('http://socrates-conference.at/', 'SoCraTes Day Linz')
+                +extlink('http://socrates-conference.at/', 'SoCraTes Days Linz')
                 br
-                small 29 Oct 2016, Linz, Austria
+                small 20-21 Oct 2017, Linz, Austria
     .logocolumn.col-sm-4.col-md-3.col-lg-4.col-md-offset-1.col-lg-offset-0
       .sidebar
         .page-header
