Update partner conferences

--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -73,27 +73,27 @@ block content
               h5
                 +extlink('http://socrates-ch.org/', 'SoCraTes Conference Switzerland')
                 br
-                small 9 - 12 Mar 2017, Ftan
+                small 9 - 12 Mar 2017, Ftan, Switzerland
             .col-sm-6
               h5
                 +extlink('https://www.socracan.com', 'SoCraTes Canaries')
                 br
-                small 6 - 9 Apr 2017, Gran Canaria
+                small 6 - 9 Apr 2017, Gran Canaria, Spain
             .col-sm-6
               h5
                 +extlink('http://itakeunconf.com/', 'I T.A.K.E. Unconference')
                 br
-                small 11 - 12 May 2017, Bucharest
+                small 11 - 12 May 2017, Bucharest, Romania
             .col-sm-6
               h5
                 +extlink('http://socrates-it.github.io/', 'SoCraTes Italy')
                 br
-                small 25 - 27 May 2017, Rimini
+                small 25 - 27 May 2017, Rimini, Italy
             .col-sm-6
               h5
                 +extlink('http://socratesuk.org/', 'SoCraTes UK')
                 br
-                small 15 - 18 June 2017, Dorking
+                small 15 - 18 June 2017, Dorking, England
             .col-sm-6
               h5
                 +extlink('https://www.socrates-conference.cl/', 'SoCraTes Chile')
@@ -103,12 +103,12 @@ block content
               h5
                 +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
                 br
-                small September 2017, Zurich
+                small September 2017, Zurich, Switzerland
             .col-sm-6
               h5
                 +extlink('http://socratesbe.org', 'SoCraTes BE')
                 br
-                small 15 - 18 Sept 2016, Tournai
+                small 9 - 12 Nov 2017, La Roche-en-Ardenne, Belgium
             .col-sm-6
               h5
                 +extlink('http://jscraftcamp.org', 'JS CraftCamp')
@@ -118,7 +118,7 @@ block content
               h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
-                small 26 - 29 Oct 2017, Rochegude
+                small 26 - 29 Oct 2017, Rochegude, France
             .col-sm-6
               h5
                 +extlink('http://socrates-conference.at/', 'SoCraTes Days Linz')
