FIX: image upload was broken b/o missing script integration

--- a/socrates/lib/activityresults/views/get.pug
+++ b/socrates/lib/activityresults/views/get.pug
@@ -39,3 +39,5 @@ block content
                           i.fa.fa-fw.fa-edit
                     span.pull-right #{photo.time().locale(language).format('LT')}
       hr
+block scripts
+  +imageScripts
