--- a/socrates/lib/members/views/userinfoform.pug
+++ b/socrates/lib/members/views/userinfoform.pug
@@ -77,13 +77,13 @@ mixin userinfoform(addon, participation, sharesARoom)
         .col-sm-6
           .form-group(style='margin-bottom:0;')
             label.control-label(for='tShirtSizeMale') T-Shirt (Male):
-            select#tShirtSizeMale.form-control(name='tShirtSize')
+            select#tShirtSizeMale.form-control.enhance(name='tShirtSize')
               for item in ['', 'S', 'M', 'L', 'XL', 'XXL', 'XXXL', 'No Shirt' ]
                 option(value=item, selected=addon.tShirtSize() === item) #{item}
         .col-sm-6
           .form-group(style='margin-bottom:0;')
             label.control-label(for='tShirtSizeFemale') T-Shirt (Female):
-            select#tShirtSizeFemale.form-control(name='tShirtSize')
+            select#tShirtSizeFemale.form-control.enhance(name='tShirtSize')
               for item in ['', 'Ladies\' XS', 'Ladies\' S', 'Ladies\' M', 'Ladies\' L', 'Ladies\' XL', 'Ladies\' XXL', 'Ladies\' No Shirt' ]
                 option(value=item, selected=addon.tShirtSize() === item) #{item}
       .row
