--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -124,6 +124,11 @@ block content
                 +extlink('http://socrates-conference.at/', 'SoCraTes Days Linz')
                 br
                 small 20-21 Oct 2017, Linz, Austria
+            .col-sm-6
+              h5
+                +extlink('http://http://scunconf.com/', 'Software Craftsmanship Unconference')
+                br
+                small 14 July 2017, Atlanta, GA, USA
     .logocolumn.col-sm-4.col-md-3.col-lg-4.col-md-offset-1.col-lg-offset-0
       .sidebar
         .page-header
