--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -69,7 +69,7 @@ block content
                 h5
                   +extlink(partner.url, partner.name)
                   br
-                  small #{partner.datestring} #{partner.location}
+                  small #{partner.datestring}, #{partner.location}
     .logocolumn.col-sm-4.col-md-3.col-lg-4.col-md-offset-1.col-lg-offset-0
       .sidebar
         .page-header
