add check in opening time in the schedule. (Only textual changes)

--- a/socrates/lib/site/views/schedule.pug
+++ b/socrates/lib/site/views/schedule.pug
@@ -117,7 +117,10 @@ block content
 
         dt Thursday
         dd.
-          The conference starts at 5pm on Thursday, August 24th 2017.
+          Check in should open at 4pm on Thursday, August 24th 2017. We will inform you
+          via Slack as soon as we are ready to begin.
+        dd.
+          The conference starts at 5pm.
           This is the time to get to know new faces or meet old friends, have
           some drinks at the bar, explore the location etc.
           T-Shirts are being distributed.
