typo Pronom to Pronomen. update text on check in opening time

--- a/socrates/lib/registration/views/managementTables.pug
+++ b/socrates/lib/registration/views/managementTables.pug
@@ -371,7 +371,7 @@ block content
                   th Nickname
                   th Vorname
                   th Nachname
-                  th Pronom
+                  th Pronomen
                   th Hilfe
                   th Helfer
                   th Diät
