--- a/socrates/lib/site/views/schedule.pug
+++ b/socrates/lib/site/views/schedule.pug
@@ -117,7 +117,7 @@ block content
 
         dt Thursday
         dd.
-          Check in should open at 4pm on Thursday, August 24th 2017. We will inform you
+          Check in is expected to open at 4pm on Thursday, August 24th 2017. We will inform you
           via Slack as soon as we are ready to begin.
         dd.
           The conference starts at 5pm.
