--- a/softwerkskammer/lib/groups/views/get.pug
+++ b/softwerkskammer/lib/groups/views/get.pug
@@ -22,12 +22,12 @@ block content
           a.btn.btn-default(href=webcalURL, title=t('activities.export_subscribe')): i.fa.fa-calendar.fa-fw
           if (accessrights.canEditGroup(group))
             a.btn.btn-default(href='/groups/edit/' + group.id, title=t('general.edit')): i.fa.fa-edit
-        h2 #{group.longName} 
-          small #{group.type} 
+        h2 #{group.longName}
+          small #{group.type}
       p
         strong
           | #{t('general.address')}:
-        | 
+        |
         a(href='mailto:' + group.id + '@softwerkskammer.org')
           | #{group.id}@softwerkskammer.org
   .row
@@ -54,6 +54,9 @@ block content
         h4 #{t('activities.upcoming_activities')}:
         +activityList(upcomingGroupActivities)
       +tagCloud
+      if (recentGroupActivities.length > 0)
+        h4 #{t('activities.recent_activities')}:
+        +activityList(recentGroupActivities)
       if (blogposts.length > 0)
          +blogposts-panel(blogposts)
 
