--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -86,6 +86,7 @@ block content
         +defItem('node-imagemagick', 'https://github.com/rsms/node-imagemagick', 'Ein Wrapper für die imagemagick Werkzeuge')
         +defItem('Image Magick', 'http://imagemagick.org/', 'Erzeugen, bearbeiten, kombinieren, konvertieren von Bitmaps')
         +defItem('i18next', 'http://i18next.com/', 'Internationalisierung')
+        +defItem('feed', 'https://github.com/jpmonette/feed', 'Erzeugung von Atom/RSS-Feeds')
 
     .col-md-4
       h2 Allgemeine Bibliotheken
