Add site title, favicon and logo to group blogpost Atom feeds

--- a/softwerkskammer/views/commonLayout.pug
+++ b/softwerkskammer/views/commonLayout.pug
@@ -12,7 +12,7 @@ html
 
     title
       block title
-      | &nbsp;- SWK
+      | &nbsp;- #{siteTitle}
     meta(property='og:image', content='https://raw.github.com/softwerkskammer/softwerkskammer-logos/master/Wappen%20mit%20Text/Softwerkskammer_WappenMitText.png')
     meta(property='og:type', content='website')
     meta(property='og:site_name', content='Softwerkskammer')
