--- a/softwerkskammer/lib/members/views/memberlist-mixin.pug
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.pug
@@ -19,10 +19,10 @@ mixin memberlist(members, organizers)
             a(href='/mailsender/contactMember/' + encodeURIComponent(member.nickname()), title=t('mailsender.write')): span.label(style='background-color: #DF5353') #{t('groups.contact')}
 
 mixin linkedMember(nickname)
-  if nickname !== 'N.N.'
+  if nickname
     a(href='/members/' + encodeURIComponent(nickname)) #{nickname}
   else
-    | #{nickname}
+    | N.N.
 
 mixin tagCloud()
   #tag-cloud
