--- a/softwerkskammer/lib/mailsender/views/compose-resign.pug
+++ b/softwerkskammer/lib/mailsender/views/compose-resign.pug
@@ -7,15 +7,20 @@ block title
 
 block content
   form#mailform(action='/mailsender/resign', method='post')
-    +csrf
     fieldset
       .row
         .col-md-12
-          +submitButtons('mailsender.send')
+          .btn-group.pull-right
+            a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
+            -var deleteoptions = {url: '/mailsender/resign', params: {nickname: nickname}}
+            +reallyDeleteModalPost('members.delete', deleteoptions)
           legend
             | #{t('mailsender.resign')}
           !=t('mailsender.resign_info', { postProcess: 'pug' })
-          +hidden('nickname', nickname)
           +textareaPure('why', t('mailsender.why-resign'), why)
           +textareaPure('notes', t('mailsender.notes-resign'), notes)
-          +submitButtons('mailsender.send')
+          .btn-group.pull-right
+            a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
+            -var deleteoptions = {url: '/mailsender/resign', params: {nickname: nickname}}
+            +reallyDeleteModalPost('members.delete', deleteoptions)
+          
