--- a/softwerkskammer/lib/members/views/get.pug
+++ b/softwerkskammer/lib/members/views/get.pug
@@ -71,8 +71,14 @@ block content
             if (group.organizers.indexOf(member.id()) > -1)
               span.label(style='background-color: #DF5353') #{t('groups.contact')}
 
+  .row
+    .col-md-6
       h3 #{t('members.participated_in')}
       +activityList(pastActivities)
+    .col-md-6
+      h3 #{t('members.organizer_or_editor_of')}
+      +activityList(organizedOrEditedActivities)
+
 
 block scripts
   +avatarscript
