--- a/softwerkskammer/lib/mailsender/views/compose.pug
+++ b/softwerkskammer/lib/mailsender/views/compose.pug
@@ -9,4 +9,4 @@ block title
   | #{t('mailsender.notification')}
 
 block content
-  +mailform(message, regionalgroups, themegroups)
+  +mailform(message, regionalgroups, themegroups, massMailing)
