--- a/softwerkskammer/lib/activities/views/activities-forms.pug
+++ b/softwerkskammer/lib/activities/views/activities-forms.pug
@@ -15,6 +15,8 @@ mixin activityform(activity, groups, editorNames, participantNames)
               | #{t('activities.edit')}
             else
               | #{t('activities.create')}
+          p #{t('activities.helptext')} 
+            a(href='/wiki/hilfe/activities-hilfe') #{t('activities.helplink')} 
       .row
         .col-md-6
           +text('title', t('activities.title'), activity.title(), t('activities.tooltip.title'))
