--- a/softwerkskammer/lib/activities/views/index.pug
+++ b/softwerkskammer/lib/activities/views/index.pug
@@ -1,4 +1,5 @@
 extends ../../../views/layout
+include ../../../../commonComponents/pug/formComponents
 include activities-mixins
 
 block title
@@ -8,18 +9,22 @@ block content
   .row
     .col-md-12
       .page-header
-        .btn-group.pull-right
-          .btn-group
-            a.btn.btn-default.dropdown-toggle(data-toggle='dropdown')
-              | #{range} &nbsp;
-              span.caret
-            ul.dropdown-menu
-              li: a(href='/activities/upcoming') #{t('activities.upcoming')}
-              li: a(href='/activities/past') #{t('activities.past')}
-              li: a(href='/activities') #{t('general.all')}
-              li: a(href='/activities/gdcr') #{t('general.gdcr_activities')}
-          a.btn.btn-default(href=webcalURL, title=t('activities.export_subscribe')): i.fa.fa-calendar.fa-fw
-          if (accessrights.canCreateActivity())
-            a.btn.btn-default(href='new/', title=t('activities.new')): i.fa.fa-file-o.fa-fw
+        form(role='form', method='POST', action='clone-from-meetup/')
+          +csrf
+          .btn-group.pull-right
+            .btn-group
+              a.btn.btn-default.dropdown-toggle(data-toggle='dropdown')
+                | #{range} &nbsp;
+                span.caret
+              ul.dropdown-menu
+                li: a(href='/activities/upcoming') #{t('activities.upcoming')}
+                li: a(href='/activities/past') #{t('activities.past')}
+                li: a(href='/activities') #{t('general.all')}
+                li: a(href='/activities/gdcr') #{t('general.gdcr_activities')}
+            a.btn.btn-default(href=webcalURL, title=t('activities.export_subscribe')): i.fa.fa-calendar.fa-fw
+            if (accessrights.isSuperuser())
+              button.btn.btn-default(type='submit'): i.fa.fa-meetup.fa-fw
+            if (accessrights.canCreateActivity())
+              a.btn.btn-default(href='new/', title=t('activities.new')): i.fa.fa-file-o.fa-fw
         h2 #{t('activities.activities')}
       +activityList(activities)
